feat(backend): add album chapters
